Work in progress for bug 350456: reducing uses of mCBReflowState for cases where we don't have the reflow state for the containing block.